[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/TestPlayer.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Textures/MagicMeter.png" type="Texture" id=4]
[ext_resource path="res://Textures/MagicMeterTop.png" type="Texture" id=5]
[ext_resource path="res://Textures/HealthFront.png" type="Texture" id=6]
[ext_resource path="res://Textures/HealthBack.png" type="Texture" id=7]
[ext_resource path="res://Scenes/MagicMeter.gd" type="Script" id=8]
[ext_resource path="res://Scenes/HealthMeter.gd" type="Script" id=9]
[ext_resource path="res://Sounds/Damage.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/Magic.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=3]
radius = 6.0
height = 2.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 17.0294

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "jump"
playing = true

[node name="InteractRay" type="RayCast2D" parent="AnimatedSprite"]
enabled = true
cast_to = Vector2( 17.77, 0 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 24.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagicMeter" type="Control" parent="CanvasLayer"]
margin_left = 7.0
margin_top = 16.0
margin_right = 22.0
margin_bottom = 19.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/MagicMeter"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 2.0
margin_bottom = 3.0
texture = ExtResource( 4 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureRect" parent="CanvasLayer/MagicMeter"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthMeter" type="Control" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 37.0
margin_bottom = 14.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Back" type="TextureRect" parent="CanvasLayer/HealthMeter"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Front" type="TextureRect" parent="CanvasLayer/HealthMeter"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )

[node name="DamageSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="MagicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
